# ipwis

./: Cargo.toml
api/: Cargo.toml
api/examples/: hello_world.rs
api/src/: client.rs  server.rs
common/: Cargo.toml
common/src/: lib.rs
examples/ipiis/bench/: Cargo.toml  build.rs
examples/ipiis/bench/src/: lib.rs
examples/webcam/: Cargo.toml
examples/webcam/src/: lib.rs  main.rs
kernel/: Cargo.toml
kernel/src/: lib.rs
modules/core/api/: Cargo.toml
modules/core/api/src/: resource_root.rs
modules/core/common/: Cargo.toml
modules/core/common/src/: lib.rs  resource_store.rs
modules/ipiis/api/: Cargo.toml
modules/ipiis/api/src/: lib.rs
modules/ipiis/common/: Cargo.toml
modules/ipiis/common/src/: lib.rs
modules/stream/api/: Cargo.toml
modules/stream/api/src/: lib.rs
modules/stream/common/: Cargo.toml
modules/stream/common/src/: lib.rs
modules/task/api/: Cargo.toml
modules/task/api/src/: task_instance.rs  task_manager.rs  task_state.rs
modules/task/api/wasi/: Cargo.toml
modules/task/api/wasi/src/: interrupt_handler.rs  interrupt_handler_state.rs  interrupt_manager.rs  interrupt_module.rs  intrinsics.rs  memory.rs  task_ctx.rs  task_manager.rs
modules/task/builder/src/: lib.rs
modules/task/common/: Cargo.toml
modules/task/common/src/: task.rs
modules/task/common/wasi/: Cargo.toml
modules/task/common/wasi/src/: lib.rs  program.rs
modules/task/demo/: Cargo.toml  build.rs
modules/task/demo/src/: lib.rs  main.rs
modules/task/entrypoint/: Cargo.toml
modules/task/entrypoint/src/: entrypoint.rs  lib.rs
modules/webcam/api/: Cargo.toml
modules/webcam/api/src/: lib.rs
modules/webcam/common/: Cargo.toml
modules/webcam/common/src/: lib.rs
