[workspace]
resolver = "2"
members = [
    "api",
    "common",
    "examples/ipiis/bench",
    "kernel",
    "modules/core/api",
    "modules/core/common",
    "modules/ipiis/api",
    "modules/ipiis/common",
    "modules/stream/api",
    "modules/stream/common",
    "modules/task/api",
    "modules/task/api/wasi",
    "modules/task/builder",
    "modules/task/common",
    "modules/task/common/wasi",
    "modules/task/demo",
    "modules/task/entrypoint",
    "pallet",
    "runtime",
]
default-members = ["runtime"]
